Fix the Z-index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -334,6 +334,7 @@ body {
 	padding: 10px;
 	padding-bottom: 0;
 	cursor: default;
+	z-index: 999;
 }
 
 .shared_notebook_title {
